# knogg

./: .gitignore  AGENTS.md  BACKLOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.3.md  SECURITY.md  clippy.toml  docker-compose.yml  knogg  knogg.toml  knogg.yml  plan-product-v0.0.3.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.knogg/adapters/: claude_code.md  codex_prompt.md  cursor_prompt.md  opencode_prompt.md
.knogg/core/: architecture.yml  index.yml  style_guides.yml
.knogg/plans/: agent_registry.yml  master_plan.yml  roles.yml  tool_registry.yml
docs/: commands.md  configuration.md  mcp.md  mesh.md  vault.md
scripts/: install.ps1  install.sh
src/: agents.rs  brief.rs  cli.rs  config.rs  decision.rs  doctor.rs  handoff.rs  hooks.rs  main.rs  mcp.rs  mesh.rs  messages.rs  proposal.rs  roles.rs  state.rs  sync.rs  vault.rs  vaultio.rs  watch.rs
src/commands/: agents.rs  brief.rs  config.rs  decision.rs  doctor.rs  gc.rs  handoff.rs  hooks.rs  hub.rs  link.rs  messages.rs  migrate.rs  mod.rs  plan.rs  proposal.rs  roles.rs  scope.rs  state.rs  style.rs  sync.rs  triage.rs  unlock.rs  update.rs  watch.rs
src/core/: config.rs  mod.rs  schema.rs  vault.rs  vaultio.rs
src/mcp/: mod.rs  prompts.rs  resources.rs
src/mesh/: client.rs  events.rs  mod.rs  pool.rs  serve.rs
