[package]
name = "knogg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "knogg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
minijinja = "2"
tokio = { version = "1", features = ["full"] }
notify = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
arboard = { version = "3", optional = true }

[features]
default = []
clipboard = ["arboard"]
