[package]
name = "knogg"
version = "1.0.1"
edition = "2021"
description = "Agent context broker — a CLI that keeps a local context store for AI coding agents and brokers context between tools"
license = "Apache-2.0"
repository = "https://github.com/jeanpierre/knogg"
readme = "README.md"
keywords = ["mcp", "ai", "context", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "knogg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
minijinja = "2"
tokio = { version = "1", features = ["full"] }
notify = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
arboard = { version = "3", optional = true }

[features]
default = []
clipboard = ["arboard"]
